--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,6 @@ django-crispy-forms==1.7.0
 django-extensions==1.9.9
 django-filter==1.1.0
 djangorestframework==3.7.7
-djangosaml2==0.15.0
-pysaml2==4.4.0
-defusedxml==0.5.0
 factory-boy==2.10.0
 gunicorn==19.7.1
 psycopg2==2.7.3.2
@@ -36,3 +33,4 @@ pytest-xdist==1.22.1
 pytest==3.4.1
 pytest-django==3.1.2
 coverage-pth==0.0.2
+pytest-sugar==0.9.1
